# mac-touchbar-plus

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  NIXOS_SETUP.md  PKGBUILD  README.md  WAYLAND_SETUP.md  default.nix  docker-run.sh  shell.nix  tiny-dfr.install
browser-extension/: background.js  content.js  manifest.json  popup.html
script/: README.md  install-nixos.sh  install.sh  uninstall.sh
share/tiny-dfr/: config.json
src/: animation.rs  config.rs  crash_handler.rs  fonts.rs  main.rs
src/display/: backlight.rs  display.rs  mod.rs  pixel_shift.rs
src/helper/: background_service_helper.rs  browser_helper.rs  focus_window_helper.rs  generic_media_main.rs  main.rs  manager.rs  media_helper.rs  media_main.rs  mod.rs  vlc_helper.rs
src/helper/background_services/: chromium.rs  mpris_manager.rs  spotify.rs
src/helper/generic_media/: mod.rs
src/helper/media/: dragon_player.rs  mod.rs  smplayer.rs  spotify.rs  vlc.rs
src/input_events/: flat_touch.rs  keyboard.rs  mod.rs  touch.rs
src/input_events/applayerkeys1_touch/: media_touch.rs  modules_touch.rs
src/input_events/applayerkeys1_touch/modules/: browser_touch.rs  media_player_touch.rs  mod.rs  vlc_touch.rs
src/layers/: button.rs  custom2_layer.rs  custom3_layer.rs  fn_layer.rs  function_layer.rs  layer_trait.rs  media_layer.rs  mod.rs
src/mac-touchbar-plus-0.1.1/: .gitignore  Cargo.toml  README.md  mac-touchbar-plus.install  nixos-module.nix
src/mac-touchbar-plus-0.1.1/share/tiny-dfr/: config.json
src/mac-touchbar-plus-0.1.1/src/: main.rs
src/mac-touchbar-plus-0.1.1/src/display/: animation.rs
src/mac-touchbar-plus-0.1.1/src/helper/: background_service_helper.rs  browser_helper.rs  manager.rs  media_main.rs
src/mac-touchbar-plus-0.1.1/src/helper/background_services/: mpris_manager.rs
src/mac-touchbar-plus-0.1.1/src/helper/media/: vlc.rs
src/mac-touchbar-plus-0.1.1/src/input_events/: keyboard.rs  touch.rs
src/mac-touchbar-plus-0.1.1/src/input_events/applayerkeys1_touch/: media_touch.rs  mod.rs  modules_touch.rs
src/mac-touchbar-plus-0.1.1/src/input_events/applayerkeys1_touch/modules/: mod.rs
src/mac-touchbar-plus-0.1.1/src/layers/: button.rs  mod.rs
src/mac-touchbar-plus-0.1.1/src/view/: browser_screen.rs  media_player_screen.rs  media_screen.rs  mod.rs  module_screen.rs  spotify_screen.rs
src/mac-touchbar-plus-0.1.1/src/view/backgroundservices/: mod.rs
src/services/: mod.rs  sessionmanager.rs
src/utils/: button_images.rs  get_env.rs  mod.rs  notification.rs  screenshot.rs
src/view/: app_ui_manager.rs  browser_screen.rs  generic_background_screen.rs  login_screen.rs  media_player_screen.rs  media_screen.rs  mod.rs  module_screen.rs  spotify_screen.rs  vlc_screen.rs
src/view/backgroundservices/: background_service_mediaplayer.rs
