[package]
name = "tiny-dfr"
version = "0.3.1"
edition = "2021"
license = "MIT AND Apache-2.0"
description = "The most basic dynamic function row daemon possible"
homepage = "https://github.com/WhatAmISupposedToPutHere/tiny-dfr"
repository = "https://github.com/WhatAmISupposedToPutHere/tiny-dfr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.18", default-features = false, features = ["freetype"] }
librsvg = "2.57"
drm = "0.11.1"
anyhow = "1"
input = "0.8"
libc = "0.2"
input-linux = { version = "0.6", features = ["serde"] }
input-linux-sys = "0.8"
nix = { version = "0.27", features = ["event", "signal", "inotify", "fs", "user"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
freetype-rs = "0.32"
icon-loader = "0.4"
chrono = { version = "0.4", features = ["unstable-locales", "serde"] }
pure-rust-locales = "0.8"
zbus = "3"
zvariant = "4.2.0"
zbus_macros = "4.4.0"
tokio = { version = "1", features = ["full"] }
futures-lite = "1"
futures = "0.3"
async-stream = "0.3"
x11rb = "0.13"
swayipc = "2.0"

[build-dependencies]
pkg-config = "0.3"

[[bin]]
name = "tiny-dfr-helper"
path = "src/helper/main.rs"
